<resources>
    <string name="app_name">Ten minute recipes</string>
    <string name="r1_title">Chat Pata Omelette</string>
    <string name="r1_ehjza">"
        1 egg (Phenter)2 pieces
        2 onions (finely chopped) 1 piece
        3 fodder size garlic (thickly chopped) 1 gamble
        4: green chillies (finely chopped) 1 piece
        5: tomatoes (finely chopped) 1 number
        6: potatoes (boil) Square piece) stuff) a number
        7: meters (from throat) 25 grams
        8: cheese (shredded) 25 grams
        9: green coriander (chopped) some leaves"
    </string>
    <string name="r1_tarqeeb">
        step1:Heat two tablespoons of oil and fry onion, half a teaspoon of cumin (crushed) garlic, green chillies, coriander and peas in it.
         step2:Grind lightly with a spoon.
         step3:Do not grind tomatoes and potatoes too much.Add scrambled eggs over high heat and cover.
         step4:When golden from the bottom, sprinkle with cheese and place under a hot broiler.
         step5:When serving, garnish with chopped green peppers
    </string>
    <string name="r2_title">Special Breakfast Recipe </string>
    <string name="r2_ehjza">
"1:egg 5 pieces
2:minced chicken (chicken) 100 grams
3:hot spices half a teaspoon
4:salt to taste
5:bread slices 4 to 5 pieces

For topping:
1:mushroom 100 gms
2:onions and tomatoes as required
3:salt and pepper powder to taste"
    </string>
    <string name="r2_tarqeeb">
"1:Heat a tablespoon of oil in a pot and cook it for 5 minutes by adding minced meat and hot spices.
2:Beat the eggs.Mix the minced meat and salt in it and make it into a hot oil omelette in the pan.
3:Grind the tomato pieces in salt.
4:Brown the slices for serving.
5:Place the omelette on the slice.
6:Layer the onion and tomato in it and serve hot."
    </string>
    <string name="r3_title">Cheese omelette recipe</string>
    <string name="r3_ehjza">
"1:Three eggs
2:Salt to taste
3:Pepper half a teaspoon
4:Two green peppers
4:one tablespoon of green coriander
5:quarter teaspoon of oil
6:Three slices of cheese"
    </string>
    <string name="r3_tarqeeb">
"1:break 3 eggs into a bowl.add 1/4 tsp of salt.
2:add two tablespoon of fresh cream and add 1/2 tsp pepper powder and mix it well
3:add 1 and half tsp of butter into a pan.pour a egg mixture and cook on medium heat.
4:after 5 minute sprinkel grated cheddar cheese and some coriander or parsley leaves.
5:cook for some time on medium to low heat.fold it and again cook for 30 second.
6:take into a plate and serve."
    </string>
    <string name="r4_title">Chilli cheese toast</string>
    <string name="r4_ehjza">"
1:Burger Bun
2:Tomato
3:Onion
4:Green chilli
5:cheese slice
6:salt"
    </string>
    <string name="r4_tarqeeb">"
Step1: Pull out the bread to make hole and use this bread to make a bread crumbs.
Step2: Add tomato,onion salt and green chilli in this hole and closed the hole using cheese slice.
Step3: place it on a baking tray and bake for 8 minutes.
Step4: Garnish it with chilli flakes and oregano. "
    </string>
    <string name="r5_title">Best Chicken Stuffed Omelet</string>
    <string name="r5_ehjza">"
Cooking oil 1 tbs
Garlic chopped 2 tbs
Chicken boneless small cubes 250 gms
Soy sauce 1 tbs
Black pepper powder ½ tsp
Paprika powder 1 tsp
Dried oregano 1 tsp
Salt ½ tsp or to taste
Green chilli 1
Tomato ketchup 1 tbs
Capsicum julienne as required
Eggs 2
Salt to taste
Mozzarella cheese grated as required
   " </string>
    <string name="r5_tarqeeb">"
In frying pan,add cooking oil,garlic and mix well.
Add chicken and mix well until changes color.
Add soya sauce,black pepper powder,paprika powder,dried oregano,salt,mix well and cook for 4-5 minutes.
Add green chilli and mix.
Add tomato ketchup and mix well.
Add tomato and capsicum,mix well for 1-2 minutes and set aside.
In bowl,add eggs,salt,black pepper powder and whisk well.
In frying pan,add cooking oil and egg mixture,cook on low flame for 2 minutes then flip and cook other side for a minute.
Now add cooked chicken mixture and mozzarella cheese,fold and cook on low flame for 30 seconds and serve!"

    </string>
    <string name="r6_title">Spinach and Swiss cheese Fluffy omelette with ham</string>
    <string name="r6_ehjza">"
2 eggs, separated
1 tablespoon milk
1/2 cup baby spinach leaves
2 slices shaved ham, torn roughly
1/4 cup grated light Swiss cheese"

    </string>
    <string name="r6_tarqeeb">"
       Step 1:
Place the egg yolks in a bowl with the milk and combine. In a separate bowl, whisk the egg whites to medium soft peaks. Gently fold into the egg yolk mixture. Set aside (do not allow to sit for too long).
Step 2:
Spray a small non-stick frying pan with oil spray and place over medium heat. Add the baby spinach and cook for 1-2 minutes or until wilted. Remove from pan and wipe pan clean. Spray pan again and return to the heat.
Step 3:
Pour in the egg mixture and cook for 2-3 minutes or until surface is nearly firm. Place the ham, spinach and cheese over half the omelette, then fold over the other side to enclose the filling. Serve immediately. Repeat ingredients and method for additional omelettes.
"
    </string>
    <string name="r7_title">French Toast with Jam and Cream</string>
    <string name="r7_ehjza">"
cream cheese 2 tablespoons, softened
cinnamon-raisin bread 2 thick slices
strawberry jam 2 tablespoons
egg 1
butter 1 tablespoon
Maple syrup, optional

        "
    </string>
    <string name="r7_tarqeeb">
        "Spread cream cheese on one slice of bread. Spread jam on the other slice place jam side down over the cream cheese.
        In a shallow bowl, beat egg. Dip both sides of bread into egg.
        In a small skillet, melt butter; toast bread for 3-4 minutes on each side or until golden brown. Serve with syrup if desired."
    </string>
    <string name="r8_title">Creamy Sandwiches Recipe</string>
    <string name="r8_ehjza">"
1Chicken seasonings (boiled and fiber) 250 gms
2 cucumbers (finely chopped) 1 tablespoon
3 olives (finely chopped) 1/2 cup
4 carrots (finely chopped) 1/2 cup
5 cabbage (finely chopped) 1/2 Cup
6 finely ground sugar 1 tablespoon
7 chopped pepper 1/2 teaspoon
8 ground white pepper 1 tablespoon
9 mayonnaise 1/4 cup
10 fresh cream 1/4 cup
11 tomato ketchup 1 cup
12 double bread custom
13 salt to taste
14 butter To make
15 tomato salad leaves"
    </string>
    <string name="r8_tarqeeb">"
1 Layer butter and tomato ketchup on double bread
2 Mix all the remaining ingredients in a bowl
3 1/2 Layer the mixture on the slices
4 Place the rest on top of them and cut into triangles
5 Decorate the serving dish with tomatoes and salad leaves
6 Serve with sandwiches on them."

    </string>
    <string name="l1_title">Shahi Karahi Recipe</string>
    <string name="l1_ehjza">"
1 Mutton (cut into cubes) 1 kg
2 red chilli powder 1 teaspoon
3 hot spice powder 1 teaspoon
4 black pepper powder 1/2 teaspoon
5 coriander (fry) 1 teaspoon
6 cumin (fry and coat) 1 teaspoon Tablespoon
7 turmeric powder 1/2 teaspoon
8 milk 1/2 cup
9 fresh cream 1/2 cup
10 yogurt 1/2 cup
11 garlic paste 1 tablespoon
12 ginger paste 1 tablespoon
13 oil customized
14 salt to taste"
    </string>
    <string name="l1_tarqeeb">"
1: Put water and meat in a saucepan and cook on medium heat.
2: When the meat is 80% cooked, remove from the heat.
3: Heat oil in a frying pan. Add garlic, ginger paste and fry for 2-3 minutes.
4: Add hot spice powder, coriander, cumin, black chilli powder,turmeric powder, salt and milk and cook on medium heat.
5: Add 4 meats and cook for 5 more minutes. Mix.
6: Take out in a serving dish and start hot with bread or chapatti."

    </string>
    <string name="l2_title">Olive Chicken</string>
    <string name="l2_ehjza">"
1: hundred grams of chicken
2: Three tablespoons of olive oil
3: Salt to taste
4: one teaspoon of pepper
5: Two Tablespoon of red pepper (chopped)
6: Three tablespoons of lemon juice
7: Three tablespoons of tomato paste
8: Three tablespoons of butter
9:  A number of onions (chopped)
10: Garlic cloves five pieces (chopped)
11: Ten olives
12: Parcel as requireds"
    </string>
    <string name="l2_tarqeeb">"
1: Apply olive oil, salt, pepper, red pepper, lemon juice and tomato paste to the chicken.
2: Then steam the chicken for ten minutes until the chicken is melted.
3: Saute onion and garlic in butter.
4: Then add chicken stock and bring to a boil.
5: Then add the steamed chicken and cook for five minutes.
6: Finally add the olives.
7: Garnish with parsley and serve."

    </string>
    <string name="l3_title">Creamed Steak Recipe</string>
    <string name="l3_ehjza">"
1: Undercut two numbers (cut into strips)
2: Butter four tablespoons
3: A number of onions (finely chopped)
4: Two mushrooms (large)
5: A quarter teaspoon of salt
6: Two cloves of garlic (crushed)
7: Parsley and a half teaspoons)
8: Basel leaves a teaspoon (dry)
9: Oregano leaves a teaspoon (dry)
10: Ginger half a teaspoon
11: A cup of cream
12: Two pickled cucumbers
13: Half a cup of parmesan cheese
14: Cheddar cheese half a cup
"
    </string>
    <string name="l3_tarqeeb">"
1:Heat butter in a pan, add onion and mushrooms and cook.
2:Then add steak and salt and fry well.
3:Now add garlic cloves, chopped parsley, basil leaves, oregano leaves and ginger.
4:Add cream, pickled, parmesan cheese and cheddar cheese and mix well.
5:Then cover and simmer on low heat for ten to fifteen minutes, until the sauce thickens.
6:Now serve the prepared sauce with mashed potatoes.
"

    </string>
    <string name="l4_title">Paya Curry (Beef Trotters/Feets)</string>
    <string name="l4_ehjza">"
1:Beef found (next part) a pair
2:Twelve cups of water
3:Ginger Garlic Paste Two tablespoons
4:A teaspoon of turmeric
5:Two tablespoons of coriander powder
6:Salt to taste
7:A tablespoon of red pepper powder
8:A tablespoon of Kashmiri red pepper
9:One slice of onion
10:A tablespoon of hot saffron spices
11:A teaspoon of fennel
"
    </string>
    <string name="l4_tarqeeb">"
Soak the pies in warm water for half an hour and then clean the hair on them with a brush.
Take water in a large saucepan and put the feet in it and boil them. There should be enough water to drown them.
Add ginger garlic paste, turmeric, coriander powder, salt, red chilli powder, Kashmiri red chilli and onion and let it boil.
When it boils, add yoghurt and cover and cook over low heat.
When the pies are melted, add hot saffron spices and fennel and cook for five minutes.
Pour into a serving bowl and serve with bread."

    </string>
    <string name="l5_title">Behari Boti (Beef Behari BBQ)</string>
    <string name="l5_ehjza">"
Beef fillet half a kilo (finely chopped)
One hundred grams of yogurt
Two tablespoons of papaya paste
One piece of onion (chopped and fried)
Garlic Ginger Paste Two tablespoons
White cumin a teaspoon (roasted and crushed)
Red pepper 1 tablespoon or to taste Chopped
A teaspoon of hot spice powder
Half a teaspoon of turmeric powder
Basin four tablespoons (roasted)
Four tablespoons of mustard oil
Salt to taste

For garnishing:
Three to four salad leaves
Two to three cucumbers
"
    </string>
    <string name="breakfast">Easy Breakfast food recipes in  English. Make easily at home with complete Step by Step instructions.</string>
    <string name="lunch">Easy Lunch food recipes in  English. Make easily at home with complete Step by Step instructions.</string>
    <string name="salad">Easy Salad food recipes in  English. Make easily at home with complete Step by Step instructions.</string>
    <string name="soup">Easy Soup food recipes in  English. Make easily at home with complete Step by Step instructions.</string>
    <string name="desert">Easy Desert food recipes in  English. Make easily at home with complete Step by Step instructions.</string>
</resources>