<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawer"
    tools:context=".activity.homepage">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <androidx.cardview.widget.CardView
                android:layout_margin="20dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:layout_height="350dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/breakfast"
                        android:background="@drawable/b2"
                        android:layout_margin="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        app:iss_auto_cycle="true"
                        app:iss_period="1000"
                        app:iss_delay="0"/>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:gravity="left"
                        android:text="Breakfast"
                        android:id="@+id/breakfast_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="left"

                        android:text="@string/breakfast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>

<!--                    <TextView-->
<!--                        android:padding="6dp"-->
<!--                        android:background="@drawable/total_recipe_button"-->
<!--                        android:layout_marginLeft="20dp"-->
<!--                        android:textColor="@color/black"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:textSize="14dp"-->
<!--                        android:layout_gravity="left"-->
<!--                        android:text="15"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content">-->

<!--                    </TextView>-->

                    <Button
                        android:id="@+id/viewall1"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="22dp"
                        android:background="@drawable/view_all_button"
                        android:onClick="ViewAll"
                        android:text="View All"

                        android:textColor="@color/black"
                        android:textSize="18dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="20dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:layout_height="350dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/lunch"
                        android:background="@drawable/b2"
                        android:layout_margin="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        app:iss_auto_cycle="true"
                        app:iss_period="1000"
                        app:iss_delay="0"/>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:gravity="left"
                        android:text="Lunch"
                        android:id="@+id/lunch_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="left"
                        android:text="@string/lunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>

                    <!--                    <TextView-->
                    <!--                        android:padding="6dp"-->
                    <!--                        android:background="@drawable/total_recipe_button"-->
                    <!--                        android:layout_marginLeft="20dp"-->
                    <!--                        android:textColor="@color/black"-->
                    <!--                        android:layout_marginTop="10dp"-->
                    <!--                        android:textSize="14dp"-->
                    <!--                        android:layout_gravity="left"-->
                    <!--                        android:text="15"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content">-->

                    <!--                    </TextView>-->

                    <Button
                        android:id="@+id/lunch_btn"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="22dp"
                        android:background="@drawable/view_all_button"
                        android:onClick="ViewAll"
                        android:text="View All"

                        android:textColor="@color/black"
                        android:textSize="18dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="20dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:layout_height="350dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/Salads"
                        android:background="@drawable/b2"
                        android:layout_margin="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        app:iss_auto_cycle="true"
                        app:iss_period="1000"
                        app:iss_delay="0"/>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:gravity="left"
                        android:text="Salads"
                        android:id="@+id/Salads_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="left"
                        android:text="@string/salad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>

                    <!--                    <TextView-->
                    <!--                        android:padding="6dp"-->
                    <!--                        android:background="@drawable/total_recipe_button"-->
                    <!--                        android:layout_marginLeft="20dp"-->
                    <!--                        android:textColor="@color/black"-->
                    <!--                        android:layout_marginTop="10dp"-->
                    <!--                        android:textSize="14dp"-->
                    <!--                        android:layout_gravity="left"-->
                    <!--                        android:text="15"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content">-->

                    <!--                    </TextView>-->

                    <Button
                        android:id="@+id/Salads_btn"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="22dp"
                        android:background="@drawable/view_all_button"
                        android:onClick="ViewAll"
                        android:text="View All"

                        android:textColor="@color/black"
                        android:textSize="18dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="20dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:layout_height="350dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/Soup"
                        android:background="@drawable/b2"
                        android:layout_margin="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        app:iss_auto_cycle="true"
                        app:iss_period="1000"
                        app:iss_delay="0"/>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:gravity="left"
                        android:text="Soup"
                        android:id="@+id/Soup_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="left"
                        android:text="@string/soup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>

                    <!--                    <TextView-->
                    <!--                        android:padding="6dp"-->
                    <!--                        android:background="@drawable/total_recipe_button"-->
                    <!--                        android:layout_marginLeft="20dp"-->
                    <!--                        android:textColor="@color/black"-->
                    <!--                        android:layout_marginTop="10dp"-->
                    <!--                        android:textSize="14dp"-->
                    <!--                        android:layout_gravity="left"-->
                    <!--                        android:text="15"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content">-->

                    <!--                    </TextView>-->

                    <Button
                        android:id="@+id/Soup_btn"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="22dp"
                        android:background="@drawable/view_all_button"
                        android:onClick="ViewAll"
                        android:text="View All"

                        android:textColor="@color/black"
                        android:textSize="18dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="20dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:layout_height="350dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/desert"
                        android:background="@drawable/b2"
                        android:layout_margin="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        app:iss_auto_cycle="true"
                        app:iss_period="1000"
                        app:iss_delay="0"/>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:gravity="left"
                        android:text="Desert"
                        android:id="@+id/desert_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:gravity="left"
                        android:text="@string/desert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TextView>

                    <!--                    <TextView-->
                    <!--                        android:padding="6dp"-->
                    <!--                        android:background="@drawable/total_recipe_button"-->
                    <!--                        android:layout_marginLeft="20dp"-->
                    <!--                        android:textColor="@color/black"-->
                    <!--                        android:layout_marginTop="10dp"-->
                    <!--                        android:textSize="14dp"-->
                    <!--                        android:layout_gravity="left"-->
                    <!--                        android:text="15"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content">-->

                    <!--                    </TextView>-->

                    <Button
                        android:id="@+id/desert_btn"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="22dp"
                        android:background="@drawable/view_all_button"
                        android:onClick="ViewAll"
                        android:text="View All"

                        android:textColor="@color/black"
                        android:textSize="18dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2992948270492543/8688332596">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/navbarheader"
        app:menu="@menu/menu"
        android:layout_gravity="start"
        />


</androidx.drawerlayout.widget.DrawerLayout>